--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,14 +1,15 @@
 # syntax=docker/dockerfile:1
-FROM golang:1.21-alpine AS builder
+FROM golang:1.23-alpine AS builder
 WORKDIR /app
-COPY go.mod go.sum ./
+RUN apk add 
+COPY go.mod ./
 RUN go mod download
+RUN go mod tidy
 COPY . .
 RUN go build -o server .
 
 FROM alpine:latest
 WORKDIR /app
 COPY --from=builder /app/server ./server
-COPY --from=builder /app/swagger ./swagger
 EXPOSE 8080
 CMD ["./server"] 
