--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,15 +1,17 @@
 # syntax=docker/dockerfile:1
 FROM golang:1.23-alpine AS builder
 WORKDIR /app
-RUN apk add 
+RUN apk add --no-cache bash build-base
 COPY go.mod ./
+COPY go.sum ./
 RUN go mod download
 RUN go mod tidy
 COPY . .
-RUN go build -o server .
+RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o main .
 
 FROM alpine:latest
-WORKDIR /app
-COPY --from=builder /app/server ./server
+RUN apk --no-cache add ca-certificates
+WORKDIR /root/
+COPY --from=builder /app/main .
 EXPOSE 8080
-CMD ["./server"] 
+CMD ["./main"]
