--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview",
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path ../.gitignore"
   },
   "dependencies": {
     "vue": "^3.4.15",
@@ -29,6 +29,7 @@
     "@vue/test-utils": "^2.4.4",
     "vitest": "^1.2.2",
     "eslint": "^8.56.0",
-    "eslint-plugin-vue": "^9.20.1"
+    "eslint-plugin-vue": "^9.20.1",
+    "@babel/eslint-parser": "^7.24.7"
   }
 }
