--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,6 +49,6 @@ jobs:
       - name: Lint
         run: npm run lint
       - name: Unit tests
-        run: npm run test -- --runInBand
+        run: npm run test -- --run
       - name: Build
         run: npm run build
