--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,24 +12,25 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path ../.gitignore"
   },
   "dependencies": {
-    "vue": "^3.4.15",
-    "vue-router": "^4.2.5",
-    "pinia": "^2.1.7",
     "axios": "^1.6.7",
-    "primevue": "^3.48.1",
-    "primeicons": "^6.0.1",
-    "vue-i18n": "^9.9.1",
     "chart.js": "^4.4.1",
+    "pinia": "^2.1.7",
+    "primeicons": "^6.0.1",
+    "primevue": "^3.48.1",
     "vee-validate": "^4.12.4",
+    "vue": "^3.4.15",
+    "vue-i18n": "^9.9.1",
+    "vue-router": "^4.2.5",
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.24.7",
     "@vitejs/plugin-vue": "^5.0.3",
-    "vite": "^5.0.12",
     "@vue/test-utils": "^2.4.4",
-    "vitest": "^1.2.2",
     "eslint": "^8.56.0",
     "eslint-plugin-vue": "^9.20.1",
-    "@babel/eslint-parser": "^7.24.7"
+    "jsdom": "^27.2.0",
+    "vite": "^5.0.12",
+    "vitest": "^1.2.2"
   }
 }
