--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,8 +18,8 @@ permissions:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_BACKEND: ghcr.io/${{ github.repository }}-backend
-  IMAGE_FRONTEND: ghcr.io/${{ github.repository }}-frontend
+  IMAGE_BACKEND: ghcr.io/${{ toLower(github.repository) }}-backend
+  IMAGE_FRONTEND: ghcr.io/${{ toLower(github.repository) }}-frontend
 
 jobs:
   build-and-push:
