hopefully last fix to ci

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,8 +18,6 @@ permissions:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_BACKEND: ghcr.io/${{ toLower(github.repository) }}-backend
-  IMAGE_FRONTEND: ghcr.io/${{ toLower(github.repository) }}-frontend
 
 jobs:
   build-and-push:
@@ -41,6 +39,13 @@ jobs:
             echo "version=${short_sha}" >> "$GITHUB_OUTPUT"
           fi
 
+      - name: Set image names
+        id: images
+        run: |
+          repo_lower=$(echo "${GITHUB_REPOSITORY}" | tr '[:upper:]' '[:lower:]')
+          echo "backend=ghcr.io/${repo_lower}-backend" >> "$GITHUB_OUTPUT"
+          echo "frontend=ghcr.io/${repo_lower}-frontend" >> "$GITHUB_OUTPUT"
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
@@ -61,8 +66,8 @@ jobs:
           file: ./backend/Dockerfile
           push: true
           tags: |
-            ${{ env.IMAGE_BACKEND }}:${{ steps.vars.outputs.version }}
-            ${{ env.IMAGE_BACKEND }}:latest
+            ${{ steps.images.outputs.backend }}:${{ steps.vars.outputs.version }}
+            ${{ steps.images.outputs.backend }}:latest
 
       - name: Build & Push Frontend Image
         uses: docker/build-push-action@v5
@@ -71,5 +76,5 @@ jobs:
           file: ./frontend/Dockerfile
           push: true
           tags: |
-            ${{ env.IMAGE_FRONTEND }}:${{ steps.vars.outputs.version }}
-            ${{ env.IMAGE_FRONTEND }}:latest
+            ${{ steps.images.outputs.frontend }}:${{ steps.vars.outputs.version }}
+            ${{ steps.images.outputs.frontend }}:latest
