--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -18,8 +18,9 @@ RUN go mod download
 # Copy source code
 COPY . .
 
-# Build the application
-RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o main ./cmd/server
+# Build binaries
+RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o bin/server ./cmd/server && \
+    CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o bin/seed ./cmd/seed
 
 # Stage 2: Runtime
 FROM alpine:latest
@@ -33,8 +34,9 @@ RUN addgroup -g 1000 app && \
 
 WORKDIR /home/app
 
-# Copy binary from builder
-COPY --from=builder /app/main .
+# Copy binaries from builder
+COPY --from=builder /app/bin/server ./main
+COPY --from=builder /app/bin/seed ./seed
 
 # Create uploads directory
 RUN mkdir -p uploads && chown -R app:app uploads
