--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -51,7 +51,7 @@ services:
       JWT_REFRESH_DURATION: ${JWT_REFRESH_DURATION:-168h}
       STORAGE_TYPE: ${STORAGE_TYPE:-local}
       STORAGE_LOCAL_PATH: ${STORAGE_LOCAL_PATH:-/home/app/uploads}
-      CORS_ALLOWED_ORIGINS: ${CORS_ALLOWED_ORIGINS:-http://localhost,http://localhost:5173}
+      CORS_ALLOWED_ORIGINS: "${CORS_ALLOWED_ORIGINS:-*}"
       LOG_LEVEL: ${LOG_LEVEL:-debug}
       ORG_NAME: ${ORG_NAME:-Happy Paws Animal Foundation}
       ORG_SHORT_NAME: ${ORG_SHORT_NAME:-Animal Foundation}
